--- a/rxjava/src/main/res/layout/activity_main.xml
+++ b/rxjava/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<com.bingley.base.BounceScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -13,4 +13,4 @@
         android:text="Hello World!"
         />
 
-</LinearLayout>
+</com.bingley.base.BounceScrollView>
